Partial text for chapter two

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -57,3 +57,12 @@
   year={2015},
   publisher={Elsevier}
 }
+
+@misc{bauer2018algebraic,
+    title={What is algebraic about algebraic effects and handlers?},
+    author={Andrej Bauer},
+    year={2018},
+    eprint={1807.05923},
+    archivePrefix={arXiv},
+    primaryClass={cs.LO}
+}
