--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -66,3 +66,28 @@
     archivePrefix={arXiv},
     primaryClass={cs.LO}
 }
+
+
+@article{plotkin2001semantics,
+  title={Semantics for algebraic operations},
+  author={Plotkin, Gordon and Power, John},
+  journal={Electronic Notes in Theoretical Computer Science},
+  volume={45},
+  pages={332--345},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{plotkin2002computational,
+  title={Computational effects and operations: An overview},
+  author={Plotkin, Gordon and Power, John},
+  year={2002}
+}
+
+@article{plotkin2013handling,
+  title={Handling algebraic effects},
+  author={Plotkin, Gordon D and Pretnar, Matija},
+  journal={arXiv preprint arXiv:1312.1399},
+  year={2013}
+}
+
