Probably finished draft of chapter 4
Still need to make listings nice and pretty.
And also lay them out so they don't break across pages.

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -51,9 +51,10 @@
 \input{introduction}
 
 \input{effects_in_theory}
+
 \chapter{O systemach kompilacji (i ich klasyfikacji)}
 
-\chapter{Efekty algebraiczne i uchwyty w~praktyce}
+\input{effects_in_practise}
 
 \chapter{Systemy kompilacji z użyciem efektów algebraicznych i~uchwytów}
 
@@ -66,7 +67,9 @@
 \nocite{biernacki2017handle}
 \nocite{biernacki2019abstracting}
 \nocite{biernacki2019binders}
-\nocite{pretnar2015introduction}
+%% \nocite{pretnar2015introduction}
+\nocite{pietersgeneralized}
+\nocite{mcbride2012frank}
 
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
