--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -91,3 +91,48 @@
   year={2013}
 }
 
+
+@article{pietersgeneralized,
+  title={Generalized Monoidal Effects And Handlers},
+  author={PIETERS, RUBEN P and SCHRIJVERS, TOM and RIVAS, EXEQUIEL}
+}
+
+@misc{effectsbibliography,
+  author = {Jeremy Yallop and contributors},
+  title = {Effects bibliography},
+  year = {2016},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/yallop/effects-bibliography/}}
+}
+
+@article{DBLP:journals/corr/LindleyMM16,
+  author    = {Sam Lindley and
+               Conor McBride and
+               Craig McLaughlin},
+  title     = {Do be do be do},
+  journal   = {CoRR},
+  volume    = {abs/1611.09259},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1611.09259},
+  archivePrefix = {arXiv},
+  eprint    = {1611.09259},
+  timestamp = {Mon, 13 Aug 2018 16:46:15 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/LindleyMM16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{mcbride2012frank,
+  title={The Frank manual},
+  author={McBride, Conor},
+  journal={Unpublished manual},
+  year={2012}
+}
+
+@inproceedings{peyton1993imperative,
+  title={Imperative functional programming},
+  author={Peyton Jones, Simon L and Wadler, Philip},
+  booktitle={Proceedings of the 20th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+  pages={71--84},
+  year={1993}
+}
