Improve listings' visual quality

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -1,7 +1,7 @@
 % Opcje klasy 'iithesis' opisane sa w komentarzach w pliku klasy. Za ich pomoca
 % ustawia sie przede wszystkim jezyk i rodzaj (lic/inz/mgr) pracy, oraz czy na
 % drugiej stronie pracy ma byc skladany wzor oswiadczenia o autorskim wykonaniu.
-\documentclass[shortabstract]{iithesis}
+\documentclass[lic,declaration,shortabstract]{iithesis}
 
 \usepackage[utf8]{inputenc}
 
@@ -30,10 +30,11 @@
 %
 %\usepackage{graphicx,listings,amsmath,amssymb,amsthm,amsfonts,tikz}
 \usepackage{cite}
-\usepackage{amsmath, amsfonts}
+\usepackage{amsmath, amsfonts, amsthm}
 \usepackage{stmaryrd} % double brackets
 \usepackage{listings}
-%
+\usepackage[usenames,dvipsnames]{xcolor}
+
 %%%%% WŁASNE DEFINICJE I POLECENIA
 %
 %\theoremstyle{definition} \newtheorem{definition}{Definition}[chapter]
